--- a/Buy/app/src/main/res/layout/activity_search.xml
+++ b/Buy/app/src/main/res/layout/activity_search.xml
@@ -17,22 +17,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
+            <EditText
                 android:id="@+id/search_bar"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="25dp"
-                android:text="FAKE CARSALES"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="10dp"
+                android:hint="Search ..."
                 android:visibility="visible"
-                android:textColor="#000"
-                android:textSize="30dp"
-                android:textAlignment="center"
                 />
 
+            <Button
+                android:id="@id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:background="#338DFF"
+                android:text="Search"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:visibility="visible"/>
 
         </LinearLayout>
         <ListView
-            android:id="@+id/main_listView"
+            android:id="@+id/search_listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
