--- a/Buy/app/src/main/res/layout/activity_login.xml
+++ b/Buy/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
             android:text="Login" />
 
         <Button
-            android:id="@+id/register"
+            android:id="@+id/zhuce"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
