--- a/Buy/app/src/main/res/layout/activity_main.xml
+++ b/Buy/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/group_ll"
+            android:id="@+id/ll1"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingTop="8dp"
@@ -54,7 +54,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/search_ll"
+            android:id="@+id/ll2"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingTop="8dp"
@@ -78,7 +78,31 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/mine_ll"
+            android:id="@+id/ll3"
+            android:gravity="center"
+            android:paddingTop="8dp"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/friend_tab_iv"
+                android:src="@drawable/select_mine"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Friends"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll4"
             android:gravity="center"
             android:paddingTop="8dp"
             android:orientation="vertical"
