Zice Yan : solve merge problems

--- a/Buy/app/src/main/res/layout/fragment_buy.xml
+++ b/Buy/app/src/main/res/layout/fragment_buy.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:id="@+id/fl"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:background="#DCDCDC"
         android:orientation="vertical">
         <LinearLayout
