--- a/Buy/app/src/main/res/layout/item_list_layout.xml
+++ b/Buy/app/src/main/res/layout/item_list_layout.xml
@@ -8,12 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/car_image"
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="50dp"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+            <ImageView
+                android:id="@+id/car_image"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_marginLeft="50dp"
+                />
+            <ImageView
+                android:id="@+id/like_image"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginTop="10dp"
+                />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
