--- a/Buy/app/src/main/res/layout/activity_main.xml
+++ b/Buy/app/src/main/res/layout/activity_main.xml
@@ -125,5 +125,29 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/ll5"
+            android:gravity="center"
+            android:paddingTop="8dp"
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/follow_tab_iv"
+                android:src="@drawable/followed_car"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Follow"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
