--- a/Buy/app/src/main/res/layout/activity_edit_member.xml
+++ b/Buy/app/src/main/res/layout/activity_edit_member.xml
@@ -6,19 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activity.RegisterActivity"
     android:background="@mipmap/timge"
-    android:gravity="center"
     android:orientation="vertical">
 
 
     <TextView
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:gravity="center"
         android:padding="20dp"
         android:text="Modify your information"
         android:textColor="#FF5722"
         android:textSize="30dp" />
+
+    <ImageView
+        android:id="@+id/iv_head"
+        android:layout_gravity="center"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@mipmap/ic_default_head" />
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -105,6 +111,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:layout_gravity="center"
         android:id="@+id/res"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
