--- a/Buy/app/src/main/res/layout/fragment_search.xml
+++ b/Buy/app/src/main/res/layout/fragment_search.xml
@@ -42,6 +42,27 @@
                 android:visibility="visible"/>
 
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:text="Price"
+                android:textColor="#000"
+                android:layout_marginLeft="20dp"/>
+
+            <Spinner
+                android:id="@+id/price_spinner"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:entries="@array/priceSort"
+                android:spinnerMode="dropdown"/>
+        </LinearLayout>
+
+
         <ListView
             android:id="@+id/search_listView"
             android:layout_width="match_parent"
