--- a/Buy/app/src/main/res/layout/fragment_search.xml
+++ b/Buy/app/src/main/res/layout/fragment_search.xml
@@ -67,9 +67,8 @@
             android:id="@+id/search_listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
-            />
+            android:orientation="vertical" />
 
 
 
