--- a/Buy/app/src/main/res/layout/item_list_layout.xml
+++ b/Buy/app/src/main/res/layout/item_list_layout.xml
@@ -2,28 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="UselessParent">
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp">
+
             <ImageView
                 android:id="@+id/car_image"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
-                android:layout_marginLeft="50dp"
-                />
+                android:layout_marginLeft="50dp" />
+
             <ImageView
                 android:id="@+id/like_image"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="9dp"
-                android:layout_marginTop="10dp"
-                />
+                android:layout_marginTop="10dp" />
         </LinearLayout>
 
         <LinearLayout
