--- a/Buy/app/src/main/res/layout/fragment_buy.xml
+++ b/Buy/app/src/main/res/layout/fragment_buy.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="25dp"
-                android:text="FAKE CARSALES"
+                android:text="REAL CARSALES"
                 android:visibility="visible"
                 android:textColor="#000"
                 android:textSize="30dp"
