--- a/Buy/app/src/main/res/values/colors.xml
+++ b/Buy/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="selectitem">#e0c8d1</color>
+    <color name="selectitem">#162B64</color>
     <color name="wait">#FFFFFF</color>
     <color name="blue">#00BCD4</color>
 
